--- a/exchange/src/main/resources/application.yml
+++ b/exchange/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 spring:
   application:
     name: exchange
+
+  datasource:
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5435/exchanges}
+    username: ${SPRING_DATASOURCE_USERNAME:exchange}
+    password: ${SPRING_DATASOURCE_PASSWORD:password}
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
   security:
     oauth2:
       resourceserver:
@@ -9,6 +19,9 @@ spring:
 
 server:
   port: ${SERVER_PORT:8082}
+  error:
+    include-message: always
+    include-binding-errors: always
 
 management:
   endpoints:
@@ -18,3 +31,11 @@ management:
   endpoint:
     health:
       show-details: always
+
+logging:
+  level:
+    com.practice.cloud.exchange: ${LOG_LEVEL:INFO}
+    org.springframework.security: ${SECURITY_LOG_LEVEL:INFO}
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
