--- a/spring-cloud-gateway/build.gradle
+++ b/spring-cloud-gateway/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'ru.yandex'
+group = 'com.practice.cloud'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -22,8 +22,18 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.cloud:spring-cloud-starter-gateway' // Стартер самого API Gateway
-	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer' // Для балансировки между инстансами
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+
+    // OAuth2 Client для поддержки Client Credentials Flow
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    // Зависимости для WebFlux Security
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    // Тестовые зависимости
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 dependencyManagement {
