#initial from theory

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,3 @@
-// include 'spring-cloud-config-server'
-// include 'spring-cloud-config-client'
+include 'spring-cloud-config-server'
+include 'spring-cloud-config-client'
 include 'spring-cloud-gateway'
-include 'exchange'
-include 'generator'
