--- a/spring-cloud-config-server/build.gradle
+++ b/spring-cloud-config-server/build.gradle
@@ -22,8 +22,7 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.cloud:spring-cloud-starter-gateway' // Стартер самого API Gateway
-	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer' // Для балансировки между инстансами
+	implementation 'org.springframework.cloud:spring-cloud-config-server' // Содержит всё необходимое для Config Server
 }
 
 dependencyManagement {
