--- a/spring-cloud-gateway/src/main/resources/application.yml
+++ b/spring-cloud-gateway/src/main/resources/application.yml
@@ -3,29 +3,19 @@ server:
 spring:
   application:
     name: application-gateway
-
-  # Настройка OAuth2 клиента
-  security:
-    oauth2:
-      client:
-        provider:
-          keycloak:
-            token-uri: http://localhost:8090/realms/demo/protocol/openid-connect/token
-        registration:
-          gateway-client:
-            provider: keycloak
-            client-id: gateway_client_id
-            client-secret: wLyISkSJxaQhyjO5fO3APxY2ZXhTiUwT
-            scope: resource.read
-            authorization-grant-type: client_credentials
-
-  # Настройка маршрутизации Gateway
   cloud:
+    discovery:
+      client:
+        simple:
+          instances:
+            property-printer-service: # Мы не используем Service Discovery, поэтому перечислим хосты самостоятельно
+              - uri: http://127.0.0.1:9001
+              - uri: http://127.0.0.1:9002
     gateway:
       routes:
-        - id: to-service-exchange # ID роута
-          uri: http://localhost:8082  # URI микросервиса, на который следует перенаправлять запрос
+        - id: property-printer-route  # ID роута
+          uri: lb://property-printer-service  # URI микросервиса, на который следует перенаправлять запрос
           predicates:
-            - Path=/api/hello # URI поступающего в гейтвей запроса, которому матчится роут
+            - Path=/property-printer/** # URI поступающего в гейтвей запроса, которому матчится роут
           filters:
-            - TokenRelay=gateway-client
+            - RewritePath=/property-printer/?(?<segment>.*), /$\{segment} # фильтр, модифицирующий запрос к целевому сервису (убирается имя сервиса в начале)
