add application gateway configuration and update dependencies

--- a/spring-cloud-gateway/src/main/resources/application.yml
+++ b/spring-cloud-gateway/src/main/resources/application.yml
@@ -3,19 +3,5 @@ server:
 spring:
   application:
     name: application-gateway
-  cloud:
-    discovery:
-      client:
-        simple:
-          instances:
-            property-printer-service: # Мы не используем Service Discovery, поэтому перечислим хосты самостоятельно
-              - uri: http://127.0.0.1:9001
-              - uri: http://127.0.0.1:9002
-    gateway:
-      routes:
-        - id: property-printer-route  # ID роута
-          uri: lb://property-printer-service  # URI микросервиса, на который следует перенаправлять запрос
-          predicates:
-            - Path=/property-printer/** # URI поступающего в гейтвей запроса, которому матчится роут
-          filters:
-            - RewritePath=/property-printer/?(?<segment>.*), /$\{segment} # фильтр, модифицирующий запрос к целевому сервису (убирается имя сервиса в начале)
+  config:
+    import: configserver:http://127.0.0.1:8888
