--- a/spring-cloud-gateway/build.gradle
+++ b/spring-cloud-gateway/build.gradle
@@ -24,6 +24,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway' // Стартер самого API Gateway
 	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer' // Для балансировки между инстансами
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'  // Для взаимодействия с Config Server
 }
 
 dependencyManagement {
